package components;

public interface Delivery {
    void deliver(String deliver);

    double generateCost();

}
